--- a/index.html
+++ b/index.html
@@ -1,21 +1,25 @@
 <!doctype html>
 <html>
-<header>
+<head>
     <title>CSS Grid</title>
     <link rel="stylesheet" type="text/css" href="css/syntax.css">
     <style>
     
     </style>
-</header>
+</head>
 <body>
-    <div id="content">
+    <input type="checkbox"/>
 
-        <div class="one">1</div>
-        <div class="two">2</div>
-        <div class="three">3</div>
-        <div class="four">4</div>
-        <div class="five">5</div>
-        <div class="six"> 6</div>
+    <div id="content">
+        <div id="grid">
+            <p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p>
+        </div>
+        <header>Header</header>
+        <main>Main</main>
+        <section>Section</section>
+        <aside>Aside</aside>
+        <nav>Nav</nav>
+        <footer>Footer</footer>
                 
     </div>
 </body>
